--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
-[package]
-name = "the_modern_cpp_challenge_in_rust"
-version = "0.1.0"
-authors = ["ASzwarc <szwarc.adam@gmail.com>"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+members = [
+    "solutions",
+    "math_problems",
+]
